--- a/tex/neural_network.tex
+++ b/tex/neural_network.tex
@@ -79,7 +79,7 @@
     
   \path[->] (s12) edge node {} (s16);    
     
-    \node [output place] (s20) [right of=s16, label={[align=center]above: $V_\text{lost}$ (1)}] {};    
+    \node [output place] (s20) [right of=s16, label={[align=center]above: $V_\text{sent}$ (1)}] {};    
 
   \path[->] (s16) edge node {} (s20);    
     
