--- a/tex/paper.tex
+++ b/tex/paper.tex
@@ -103,9 +103,14 @@
 \renewcommand{\shortauthors}{Bachl, Zseby, Fabini}
 
 \begin{abstract}
-This paper provides a sample of a \LaTeX\ document which conforms,
-somewhat loosely, to the formatting guidelines for
-ACM SIG Proceedings.\footnote{This is an abstract footnote}
+This paper proposes a new method of congestion control in packet-switched networks that uses on-line reinforcement learning to determine the optimum congestion window size at a given point in time with respect to a chosen utility function. 
+
+To this end we use an Artifical Neural Network based approach that can be initialized with a previously trained neural network or with random weights (without any preknowledge). When being used without any preknowledge the approach converges to a stable solution within the order of minutes and then outperforms existing congestion control algorithms with respect to throughput. 
+
+
+
+To our knowledge (\todo{Make sure this is really true!})
+
 \end{abstract}
 
 %
